tests/basic/check/if/050.pan

f50 : {v:int|false}
f50 = if true then 1 else 2

f51 : {v:int|false}
f51 = if false then 1 else 2

f52 : {v:int|false}
f52 = let b = true in if b then 1 else 2

f53 : {v:int|false}
f53 = let b = false in if b then 1 else 2
